examples/datalog/33_meta/25_version_command.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .version
Script error: Parse error: Unknown meta command: .version
