examples/datalog/33_meta/25_version_command.dl
% Test: Version command
% Expected: Show version information
% Category: 33_meta
% Priority: P2 - Meta commands

.version
